--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
         "blog_headName":"Mr.Kumar_blogs",
         "gmail-user":"sikku.saurav4@gmail.com",
         "gmail-password":"123@Nitesh",
-        "about":"So Hii Thank YU to visit my page. This page is all about the Dout or if Yu find any kind of problem  related cryptocurrenct or want to know about any graph analysis .Yu are free to ask , please make post we will all reply Yu defintly . THANK YU",
+        "about":"Hii Thank YU to visit my page. This page is all about the Dout or if Yu find any kind of problem  related cryptocurrenct or want to know about any graph analysis .Yu are free to ask , please make post we will all reply Yu defintly . THANK YU",
         "no_of_posts":2,
         "admin_user":"sikku",
         "admin_password":"hello123"
